# O.M.A

./: CMakeLists.txt  CMakePresets.json  README.md
imgui/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  graph.cpp  graph.hpp  uid_map.hpp
src/internal/: CMakeLists.txt  system_clock.cpp  system_clock.hpp
src/ui/: CMakeLists.txt  Editor.cpp  Editor.hpp  app.cpp  app.hpp
